--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "author": "AsaMitaka",
   "description": "A project that does something awesome",
+  "keywords": [
+    "descriptive",
+    "related",
+    "words"
+  ],
   "name": "fcc-learn-npm-package-json",
   "dependencies": {
     "express": "^4.14.0"
