* minor keywords fix

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "keywords": [
     "descriptive",
     "related",
-    "words"
+    "words",
+    "freecodecamp"
   ],
   "name": "fcc-learn-npm-package-json",
   "dependencies": {
