--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "words",
     "freecodecamp"
   ],
+  "license": "MIT",
   "name": "fcc-learn-npm-package-json",
   "dependencies": {
     "express": "^4.14.0"
