--- a/package.json
+++ b/package.json
@@ -19,5 +19,6 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/freeCodeCamp/boilerplate-npm.git"
-  }
+  },
+  "version": "1.2.0",
 }
