--- a/package.json
+++ b/package.json
@@ -20,5 +20,5 @@
     "type": "git",
     "url": "https://github.com/freeCodeCamp/boilerplate-npm.git"
   },
-  "version": "1.2.0",
+  "version": "1.2.0"
 }
