--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "author": "AsaMitaka",
   "description": "A project that does something awesome",
+  
   "keywords": [
     "descriptive",
     "related",
@@ -10,8 +11,9 @@
   "license": "MIT",
   "name": "fcc-learn-npm-package-json",
   "dependencies": {
-    "express": "^4.14.0"
-  },
+    "package-name": "version",
+    "express": "4.14.0"
+  },  
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
