--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "author": "AsaMitaka",
   "description": "A project that does something awesome",
-  
   "keywords": [
     "descriptive",
     "related",
@@ -11,9 +10,9 @@
   "license": "MIT",
   "name": "fcc-learn-npm-package-json",
   "dependencies": {
-    "package-name": "version",
+    "@freecodecamp/example": "1.1.0",
     "express": "4.14.0"
-  },  
+  },
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
